[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lwiki"
version = "0.1.0"
description = "CLI for LLM Wiki: init wiki trees and track raw/ against files.log"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
lwiki = "lwiki.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lwiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
